<resources>
    <string name="app_name">KlikDokter</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="products">Products</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="sku">Sku</string>
    <string name="product_name">Product name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="unit">Unit</string>
    <string name="submit">Submit</string>
    <string name="add_product">Add Product</string>
    <string name="search_hint">Search by SKU</string>

    <string name="message_register_success">Success register!</string>
</resources>