<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        app:layout_constrainedWidth="true"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/edtSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionSearch"
        app:defaultQueryHint="@string/search_hint"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toStartOf="@id/btnAddProduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search_hint"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlProduct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddProduct"
        app:layout_constraintBottom_toTopOf="@id/btnLogout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>